fix icons on smaller viewports

--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -1,119 +1,122 @@
 html,
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 body {
-  overflow-x: hidden;
-  padding-top: 10px;
-  text-align: center;
-  color: black;
-  background-color: whitesmoke;
+    overflow-x: hidden;
+    padding-top: 10px;
+    text-align: center;
+    color: black;
+    background-color: whitesmoke;
 }
 .myh1 {
-  font-size: 10vw;
-  padding-top: 60px;
-  letter-spacing: 8px;
-  font-family: 'Bungee Shade', Helvetica, Arial;
-  text-shadow: 2px 2px rgba(35, 101, 199, 0.486);
+    font-size: 10vw;
+    padding-top: 60px;
+    letter-spacing: 8px;
+    font-family: 'Bungee Shade', Helvetica, Arial;
+    text-shadow: 2px 2px rgba(35, 101, 199, 0.486);
 }
 .myh3 {
-  font-size: 8.6vw;
-  font-family: Arial, Helvetica, sans-serif;
-  text-shadow: 2px 2px rgba(35, 101, 199, 0.486);
+    font-size: 8.6vw;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 2px 2px rgba(35, 101, 199, 0.486);
 }
 
 /* logos of frameworks */
 .flex-container {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  padding: 0;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    padding: 0;
 }
 .flex-item {
-  padding: 30px;
-  flex: 1;
-  margin: 15px;
-  /* flex: 10%; */
+    padding: 30px;
+    flex: 1;
+    margin: 15px;
+    /* flex: 10%; */
 }
 
 .projects-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 .projects-container > div {
-  width: 400px;
-  margin: 20px;
+    width: 400px;
+    margin: 20px;
 }
 .favorites {
-  background-color: #110361;
+    background-color: #110361;
 }
 
 .truepixelsvgs {
-  height: auto;
-  width: 290px;
+    height: auto;
+    width: 290px;
 }
 .websvg {
-  height: auto;
-  max-width: 100%;
+    height: auto;
+    max-width: 100%;
 }
 .websvg.vue {
-  max-width: 63%;
-  transform: translateY(25px);
+    max-width: 63%;
+    transform: translateY(25px);
 }
 @media (max-width: 750px) {
-  .websvg.vue {
-    transform: translateY(10px);
-  }
+    .websvg.vue {
+        transform: translateY(10px);
+    }
 }
+@media (max-width: 830px) {
+    .websvg.vue {
+        transform: translateY(1px);
+    }
+}
+
 .sec-hero {
-  min-height: 54vh;
-  margin-bottom: 15px;
-}
-.proj-img {
-  border-radius: 50%;
+    min-height: 54vh;
+    margin-bottom: 15px;
 }
 .vertical-text {
-  writing-mode: vertical-rl;
-  text-orientation: upright;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
 }
 .codeicon {
-  height: 25px;
-  width: auto;
+    height: 25px;
+    width: auto;
 }
 .about-me {
-  background-color: #110361;
-  min-height: 30vh;
-  padding: 3em 5em;
-  color: white;
+    background-color: #110361;
+    min-height: 30vh;
+    padding: 3em 5em;
+    color: white;
 }
 #footer {
-  padding: 3em 0;
+    padding: 3em 0;
 }
 .columns.mycarddd {
-  background-color: #ffffff;
+    background-color: #ffffff;
 }
 .columns.mycarddd:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 /* Responsive layout - makes a one column-layout instead of two-column layout */
 @media (max-width: 680px) {
-  .projects-container {
-    flex-direction: column;
-  }
-  .projects-container > div {
-    width: 94%;
-    margin-left: auto;
-    margin-right: auto;
-  }
+    .projects-container {
+        flex-direction: column;
+    }
+    .projects-container > div {
+        width: 94%;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 @media (max-width: 640px) {
-  .flex-item {
-    padding: 20px;
-  }
+    .flex-item {
+        padding: 8px;
+    }
 
-  .sec-hero {
-    min-height: 0;
-    margin-bottom: 0px;
-  }
+    .sec-hero {
+        min-height: 0;
+        margin-bottom: 0px;
+    }
 }
